Fixed the flicker on page load

--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -195,6 +195,7 @@ body div#message a {
     margin-bottom: 15px;
     padding: 15px;
     width: 700px;
+    display: none; /* Hidden until after the dijit parser finishes */
 }
 
 .content a {
